Opened 13 years ago

Closed 13 years ago

Last modified 13 years ago

#2603 closed defect (fixed)

mingw32 cross compile issue

Reported by: Huemac Owned by:
Priority: normal Component: avutil
Version: git-master Keywords: win opencl
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

Could someone please append a semicolon after this line in libavutil/opencl.c function "av_opencl_release_kernel" :

https://github.com/FFmpeg/FFmpeg/blob/master/libavutil/opencl.c#L449

From this:

end:
  UNLOCK_OPENCL

To this:

end:
  UNLOCK_OPENCL;

If I manually do this change to the source code it compiles with no errors. If it's not there it says:

libavutil/opencl.c: In function ‘av_opencl_release_kernel’:
libavutil/opencl.c:448:1: error: label at end of compound statement
make: *** [libavutil/opencl.o] Error 1

And as you can see from the opencl.c code that in other similar cases the semicolon is there!

I'm building on Ubuntu Precise Pangolin to Win32 using mingw32.

Change History (3)

comment:1 by Carl Eugen Hoyos, 13 years ago

Keywords: win opencl added; mingw32 cross compile issue removed

Please consider sending a patch to ffmpeg-devel.

comment:2 by Clément Bœsch, 13 years ago

Resolution: fixed
Status: newclosed

comment:3 by Carl Eugen Hoyos, 13 years ago

This used to be a duplicate of ticket #2448 (which was fixed by the same commit).

Note: See TracTickets for help on using tickets.