lavu/opencl: remove semi-colon from macro.

Fixes compilation when the macros are empty and the label above ends up
containing no statement. Also makes usage of these macro consistent
(some already have a semi colon, some others don't).

Fixes Ticket #2603